Update results.csv file

--- a/notebooks/00_high_level_analysis.ipynb
+++ b/notebooks/00_high_level_analysis.ipynb
@@ -30,8 +30,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-02T20:42:40.758955Z",
-     "start_time": "2025-06-02T20:42:40.754972Z"
+     "end_time": "2025-06-02T20:53:51.027010Z",
+     "start_time": "2025-06-02T20:53:51.020920Z"
     }
    },
    "source": [
@@ -44,7 +44,7 @@
     "df = pd.read_csv(file_path, sep=';')"
    ],
    "outputs": [],
-   "execution_count": 10
+   "execution_count": 16
   },
   {
    "cell_type": "markdown",
@@ -63,8 +63,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-02T20:42:41.178686Z",
-     "start_time": "2025-06-02T20:42:40.770365Z"
+     "end_time": "2025-06-02T20:53:51.503118Z",
+     "start_time": "2025-06-02T20:53:51.041801Z"
     }
    },
    "source": [
@@ -115,7 +115,7 @@
      ]
     }
    ],
-   "execution_count": 11
+   "execution_count": 17
   },
   {
    "cell_type": "markdown",
@@ -130,8 +130,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-02T20:42:41.193331Z",
-     "start_time": "2025-06-02T20:42:41.189415Z"
+     "end_time": "2025-06-02T20:53:51.518237Z",
+     "start_time": "2025-06-02T20:53:51.514642Z"
     }
    },
    "source": [
@@ -144,7 +144,7 @@
     "df = pd.read_csv(file_path, sep=';')"
    ],
    "outputs": [],
-   "execution_count": 12
+   "execution_count": 18
   },
   {
    "cell_type": "markdown",
@@ -159,8 +159,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-02T20:42:41.204346Z",
-     "start_time": "2025-06-02T20:42:41.202385Z"
+     "end_time": "2025-06-02T20:53:51.529455Z",
+     "start_time": "2025-06-02T20:53:51.527688Z"
     }
    },
    "source": [
@@ -168,7 +168,7 @@
     "completed = df[df[\"Finished\"] == 1]"
    ],
    "outputs": [],
-   "execution_count": 13
+   "execution_count": 19
   },
   {
    "cell_type": "markdown",
@@ -183,8 +183,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-02T20:42:41.216598Z",
-     "start_time": "2025-06-02T20:42:41.212342Z"
+     "end_time": "2025-06-02T20:53:51.541189Z",
+     "start_time": "2025-06-02T20:53:51.537995Z"
     }
    },
    "source": [
@@ -205,7 +205,7 @@
     "}"
    ],
    "outputs": [],
-   "execution_count": 14
+   "execution_count": 20
   },
   {
    "cell_type": "markdown",
@@ -220,8 +220,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-02T20:42:41.455658Z",
-     "start_time": "2025-06-02T20:42:41.225046Z"
+     "end_time": "2025-06-02T20:53:51.556941Z",
+     "start_time": "2025-06-02T20:53:51.551363Z"
     }
    },
    "source": [
@@ -236,75 +236,75 @@
     {
      "data": {
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x10aa3ab70>"
+       "<pandas.io.formats.style.Styler at 0x1193852b0>"
       ],
       "text/html": [
        "<style type=\"text/css\">\n",
        "</style>\n",
-       "<table id=\"T_ef1c2\">\n",
+       "<table id=\"T_b08f9\">\n",
        "  <caption>Qualtrics Python Skill Level Assessment - High-level Metrics</caption>\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_ef1c2_level0_col0\" class=\"col_heading level0 col0\" >Metric</th>\n",
-       "      <th id=\"T_ef1c2_level0_col1\" class=\"col_heading level0 col1\" >Value</th>\n",
+       "      <th id=\"T_b08f9_level0_col0\" class=\"col_heading level0 col0\" >Metric</th>\n",
+       "      <th id=\"T_b08f9_level0_col1\" class=\"col_heading level0 col1\" >Value</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_ef1c2_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
-       "      <td id=\"T_ef1c2_row0_col0\" class=\"data row0 col0\" >Total number of responses</td>\n",
-       "      <td id=\"T_ef1c2_row0_col1\" class=\"data row0 col1\" >78.00</td>\n",
+       "      <th id=\"T_b08f9_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+       "      <td id=\"T_b08f9_row0_col0\" class=\"data row0 col0\" >Total number of responses</td>\n",
+       "      <td id=\"T_b08f9_row0_col1\" class=\"data row0 col1\" >78.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_ef1c2_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
-       "      <td id=\"T_ef1c2_row1_col0\" class=\"data row1 col0\" >Total number of completed responses</td>\n",
-       "      <td id=\"T_ef1c2_row1_col1\" class=\"data row1 col1\" >60.00</td>\n",
+       "      <th id=\"T_b08f9_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
+       "      <td id=\"T_b08f9_row1_col0\" class=\"data row1 col0\" >Total number of completed responses</td>\n",
+       "      <td id=\"T_b08f9_row1_col1\" class=\"data row1 col1\" >60.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_ef1c2_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n",
-       "      <td id=\"T_ef1c2_row2_col0\" class=\"data row2 col0\" >Completion rate (%)</td>\n",
-       "      <td id=\"T_ef1c2_row2_col1\" class=\"data row2 col1\" >76.92</td>\n",
+       "      <th id=\"T_b08f9_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n",
+       "      <td id=\"T_b08f9_row2_col0\" class=\"data row2 col0\" >Completion rate (%)</td>\n",
+       "      <td id=\"T_b08f9_row2_col1\" class=\"data row2 col1\" >76.92</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_ef1c2_level0_row3\" class=\"row_heading level0 row3\" >3</th>\n",
-       "      <td id=\"T_ef1c2_row3_col0\" class=\"data row3 col0\" >Average duration (sec)</td>\n",
-       "      <td id=\"T_ef1c2_row3_col1\" class=\"data row3 col1\" >26528.42</td>\n",
+       "      <th id=\"T_b08f9_level0_row3\" class=\"row_heading level0 row3\" >3</th>\n",
+       "      <td id=\"T_b08f9_row3_col0\" class=\"data row3 col0\" >Average duration (sec)</td>\n",
+       "      <td id=\"T_b08f9_row3_col1\" class=\"data row3 col1\" >26528.42</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_ef1c2_level0_row4\" class=\"row_heading level0 row4\" >4</th>\n",
-       "      <td id=\"T_ef1c2_row4_col0\" class=\"data row4 col0\" >Median duration (sec)</td>\n",
-       "      <td id=\"T_ef1c2_row4_col1\" class=\"data row4 col1\" >986.50</td>\n",
+       "      <th id=\"T_b08f9_level0_row4\" class=\"row_heading level0 row4\" >4</th>\n",
+       "      <td id=\"T_b08f9_row4_col0\" class=\"data row4 col0\" >Median duration (sec)</td>\n",
+       "      <td id=\"T_b08f9_row4_col1\" class=\"data row4 col1\" >986.50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_ef1c2_level0_row5\" class=\"row_heading level0 row5\" >5</th>\n",
-       "      <td id=\"T_ef1c2_row5_col0\" class=\"data row5 col0\" >Average Python experience (years)</td>\n",
-       "      <td id=\"T_ef1c2_row5_col1\" class=\"data row5 col1\" >5.70</td>\n",
+       "      <th id=\"T_b08f9_level0_row5\" class=\"row_heading level0 row5\" >5</th>\n",
+       "      <td id=\"T_b08f9_row5_col0\" class=\"data row5 col0\" >Average Python experience (years)</td>\n",
+       "      <td id=\"T_b08f9_row5_col1\" class=\"data row5 col1\" >5.70</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_ef1c2_level0_row6\" class=\"row_heading level0 row6\" >6</th>\n",
-       "      <td id=\"T_ef1c2_row6_col0\" class=\"data row6 col0\" >Average general experience (years)</td>\n",
-       "      <td id=\"T_ef1c2_row6_col1\" class=\"data row6 col1\" >12.77</td>\n",
+       "      <th id=\"T_b08f9_level0_row6\" class=\"row_heading level0 row6\" >6</th>\n",
+       "      <td id=\"T_b08f9_row6_col0\" class=\"data row6 col0\" >Average general experience (years)</td>\n",
+       "      <td id=\"T_b08f9_row6_col1\" class=\"data row6 col1\" >12.77</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_ef1c2_level0_row7\" class=\"row_heading level0 row7\" >7</th>\n",
-       "      <td id=\"T_ef1c2_row7_col0\" class=\"data row7 col0\" >Average estimated correct answers</td>\n",
-       "      <td id=\"T_ef1c2_row7_col1\" class=\"data row7 col1\" >12.22</td>\n",
+       "      <th id=\"T_b08f9_level0_row7\" class=\"row_heading level0 row7\" >7</th>\n",
+       "      <td id=\"T_b08f9_row7_col0\" class=\"data row7 col0\" >Average estimated correct answers</td>\n",
+       "      <td id=\"T_b08f9_row7_col1\" class=\"data row7 col1\" >12.22</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_ef1c2_level0_row8\" class=\"row_heading level0 row8\" >8</th>\n",
-       "      <td id=\"T_ef1c2_row8_col0\" class=\"data row8 col0\" >Pearson Correlation (Python YoE and General programming YoE)</td>\n",
-       "      <td id=\"T_ef1c2_row8_col1\" class=\"data row8 col1\" >0.55</td>\n",
+       "      <th id=\"T_b08f9_level0_row8\" class=\"row_heading level0 row8\" >8</th>\n",
+       "      <td id=\"T_b08f9_row8_col0\" class=\"data row8 col0\" >Pearson Correlation (Python YoE and General programming YoE)</td>\n",
+       "      <td id=\"T_b08f9_row8_col1\" class=\"data row8 col1\" >0.55</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_ef1c2_level0_row9\" class=\"row_heading level0 row9\" >9</th>\n",
-       "      <td id=\"T_ef1c2_row9_col0\" class=\"data row9 col0\" >Spearman Correlation (Python YoE and self-reported score)</td>\n",
-       "      <td id=\"T_ef1c2_row9_col1\" class=\"data row9 col1\" >0.24</td>\n",
+       "      <th id=\"T_b08f9_level0_row9\" class=\"row_heading level0 row9\" >9</th>\n",
+       "      <td id=\"T_b08f9_row9_col0\" class=\"data row9 col0\" >Spearman Correlation (Python YoE and self-reported score)</td>\n",
+       "      <td id=\"T_b08f9_row9_col1\" class=\"data row9 col1\" >0.24</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_ef1c2_level0_row10\" class=\"row_heading level0 row10\" >10</th>\n",
-       "      <td id=\"T_ef1c2_row10_col0\" class=\"data row10 col0\" >Spearman Correlation (General programming YoE and self-reported score)</td>\n",
-       "      <td id=\"T_ef1c2_row10_col1\" class=\"data row10 col1\" >0.03</td>\n",
+       "      <th id=\"T_b08f9_level0_row10\" class=\"row_heading level0 row10\" >10</th>\n",
+       "      <td id=\"T_b08f9_row10_col0\" class=\"data row10 col0\" >Spearman Correlation (General programming YoE and self-reported score)</td>\n",
+       "      <td id=\"T_b08f9_row10_col1\" class=\"data row10 col1\" >0.03</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
@@ -314,14 +314,14 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 15
+   "execution_count": 21
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-02T20:42:41.466204Z",
-     "start_time": "2025-06-02T20:42:41.465062Z"
+     "end_time": "2025-06-02T20:53:51.572382Z",
+     "start_time": "2025-06-02T20:53:51.571190Z"
     }
    },
    "source": [],
