Update notebooks in markdown and code blocks for better readability

--- a/notebooks/00_high_level_analysis.ipynb
+++ b/notebooks/00_high_level_analysis.ipynb
@@ -6,11 +6,11 @@
    "source": [
     "# EXCEED Python Qualtrics Survey - High-Level Analysis\n",
     "\n",
-    "This document provides a high-level analysis of the results from the Qualtrics Python Skill Level Survey. The goal of the survey was to objectively assess the Python skill levels of participants, by placing them into one of the 2 categories: _Beginner_/_Novices_ and _Advanced_/_Experts_. \n",
+    "This notebook provides a high-level analysis of the results from the Qualtrics Python Skill Level Survey. The goal of the survey was to objectively assess the Python skill levels of participants, by placing them into one of the following 2 categories: _Beginner_/_Novices_ and _Advanced_/_Experts_.\n",
     "\n",
-    "The ultimate goal is to identify the best subset of questions that can effectively differentiate between these two skill levels. The actual content of the survey is centered around several aspects of Python programming error messages, and debugging techniques. The underlying assumption is that individuals with more experience in Python (and perhaps even general programming experience) will have a better understanding of error identification, resolution, and debugging strategies.\n",
+    "The ultimate goal of the survey was and is to identify the best subset of questions that can effectively differentiate between these two skill levels. The actual content of the survey is centered around several aspects of Python programming error messages, and debugging techniques. The underlying assumption is that individuals with more experience in Python (and perhaps even general programming experience) will have a better understanding of error identification, resolution, and debugging strategies.\n",
     "\n",
-    "The actual metrics that are captured in this analysis include:\n",
+    "The actual metrics that are captured in this high-level analysis include:\n",
     "- **Completion Rate**: The percentage of participants who started and completed the survey.\n",
     "- **Average duration**: The average time (in seconds) taken by participants to complete the survey.\n",
     "- **Median duration**: The median time (in seconds) taken by participants to complete the survey.\n",
@@ -21,7 +21,8 @@
     "- **Correlation between self-reported score and Python YoE**: The Spearman correlation coefficient between the self-reported correct answers score and the number of years of experience with Python.\n",
     "- **Correlation between self-reported score and Programming YoE**: The Spearman correlation coefficient between the self-reported correct answers score and the number of years of experience with programming in general.\n",
     "\n",
-    "> Notes: \n",
+    "> Notes:\n",
+    "> - The metrics are calculated based on the completed responses only, as incomplete responses do not provide meaningful data for analysis.\n",
     "> - Since Python YoE and Programming YoE are essentially continuous variables, the correlation coefficients are calculated using the Pearson method.\n",
     "> - The self-reported number of correctly answered questions is a discrete variable (0 - 16), so the Spearman method is used for correlation calculations."
    ]
@@ -30,21 +31,21 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-02T20:53:51.027010Z",
-     "start_time": "2025-06-02T20:53:51.020920Z"
+     "end_time": "2025-06-03T07:03:26.071901Z",
+     "start_time": "2025-06-03T07:03:25.853808Z"
     }
    },
    "source": [
     "import pandas as pd\n",
     "\n",
     "# Set the path to the Qualtrics CSV file (adjust as needed, but default should be kept)\n",
-    "file_path = \"../data/survey_results.csv\"\n",
+    "file_path = \"../data/survey_results_02_06_2025.csv\"\n",
     "\n",
     "# 1. Load data (Qualtrics exports are semicolon‑delimited by default)\n",
     "df = pd.read_csv(file_path, sep=';')"
    ],
    "outputs": [],
-   "execution_count": 16
+   "execution_count": 1
   },
   {
    "cell_type": "markdown",
@@ -63,8 +64,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-02T20:53:51.503118Z",
-     "start_time": "2025-06-02T20:53:51.041801Z"
+     "end_time": "2025-06-03T07:03:26.572562Z",
+     "start_time": "2025-06-03T07:03:26.131908Z"
     }
    },
    "source": [
@@ -115,7 +116,7 @@
      ]
     }
    ],
-   "execution_count": 17
+   "execution_count": 2
   },
   {
    "cell_type": "markdown",
@@ -130,21 +131,21 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-02T20:53:51.518237Z",
-     "start_time": "2025-06-02T20:53:51.514642Z"
+     "end_time": "2025-06-03T07:03:26.585459Z",
+     "start_time": "2025-06-03T07:03:26.581501Z"
     }
    },
    "source": [
     "import pandas as pd\n",
     "\n",
     "# Set the path to the Qualtrics CSV file (adjust as needed, but default is in the same directory)\n",
-    "file_path = \"../data/survey_results.csv\"\n",
+    "file_path = \"../data/survey_results_02_06_2025.csv\"\n",
     "\n",
     "# 1. Load data (Qualtrics exports are semicolon‑delimited by default)\n",
     "df = pd.read_csv(file_path, sep=';')"
    ],
    "outputs": [],
-   "execution_count": 18
+   "execution_count": 3
   },
   {
    "cell_type": "markdown",
@@ -159,8 +160,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-02T20:53:51.529455Z",
-     "start_time": "2025-06-02T20:53:51.527688Z"
+     "end_time": "2025-06-03T07:03:26.594234Z",
+     "start_time": "2025-06-03T07:03:26.592529Z"
     }
    },
    "source": [
@@ -168,7 +169,7 @@
     "completed = df[df[\"Finished\"] == 1]"
    ],
    "outputs": [],
-   "execution_count": 19
+   "execution_count": 4
   },
   {
    "cell_type": "markdown",
@@ -183,8 +184,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-02T20:53:51.541189Z",
-     "start_time": "2025-06-02T20:53:51.537995Z"
+     "end_time": "2025-06-03T07:03:26.605423Z",
+     "start_time": "2025-06-03T07:03:26.602162Z"
     }
    },
    "source": [
@@ -200,12 +201,14 @@
     "    \"Average estimated correct answers\": completed[\"Q11.1\"].mean(),\n",
     "    # Some correlations\n",
     "    \"Pearson Correlation (Python YoE and General programming YoE)\": completed[[\"Q2.2\", \"Q2.3\"]].corr().iloc[0, 1],\n",
-    "    \"Spearman Correlation (Python YoE and self-reported score)\": completed[[\"Q2.2\", \"Q11.1\"]].corr(method='spearman').iloc[0, 1],\n",
-    "    \"Spearman Correlation (General programming YoE and self-reported score)\": completed[[\"Q2.3\", \"Q11.1\"]].corr(method='spearman').iloc[0, 1]\n",
+    "    \"Spearman Correlation (Python YoE and self-reported score)\":\n",
+    "        completed[[\"Q2.2\", \"Q11.1\"]].corr(method='spearman').iloc[0, 1],\n",
+    "    \"Spearman Correlation (General programming YoE and self-reported score)\":\n",
+    "        completed[[\"Q2.3\", \"Q11.1\"]].corr(method='spearman').iloc[0, 1]\n",
     "}"
    ],
    "outputs": [],
-   "execution_count": 20
+   "execution_count": 5
   },
   {
    "cell_type": "markdown",
@@ -213,98 +216,110 @@
    "source": [
     "## Step 4: Generate the Report\n",
     "\n",
-    "This step creates a summary report of the analysis results."
+    "This step creates a summary report of the analysis results. More specifically, it presents the metrics calculated in the previous step in a tidy table format, which can be easily interpreted and shared."
    ]
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-02T20:53:51.556941Z",
-     "start_time": "2025-06-02T20:53:51.551363Z"
+     "end_time": "2025-06-03T07:03:26.810833Z",
+     "start_time": "2025-06-03T07:03:26.614405Z"
     }
    },
    "source": [
-    "from IPython.display import display\n",
+    "from IPython.display import display, HTML\n",
     "\n",
     "# 4. Present results in a tidy table\n",
     "summary_df = pd.DataFrame(list(metrics.items()), columns=[\"Metric\", \"Value\"])\n",
     "\n",
-    "display(summary_df.style.set_caption(\"Qualtrics Python Skill Level Assessment - High-level Metrics\").format(precision=2))"
+    "display(HTML(\"<h2>Qualtrics Python Skill Level Assessment - High-level Metrics</h2>\"))\n",
+    "display(summary_df.style.format(precision=2))"
    ],
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x1193852b0>"
+       "<IPython.core.display.HTML object>"
+      ],
+      "text/html": [
+       "<h2>Qualtrics Python Skill Level Assessment - High-level Metrics</h2>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<pandas.io.formats.style.Styler at 0x108cadb20>"
       ],
       "text/html": [
        "<style type=\"text/css\">\n",
        "</style>\n",
-       "<table id=\"T_b08f9\">\n",
-       "  <caption>Qualtrics Python Skill Level Assessment - High-level Metrics</caption>\n",
+       "<table id=\"T_9d893\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_b08f9_level0_col0\" class=\"col_heading level0 col0\" >Metric</th>\n",
-       "      <th id=\"T_b08f9_level0_col1\" class=\"col_heading level0 col1\" >Value</th>\n",
+       "      <th id=\"T_9d893_level0_col0\" class=\"col_heading level0 col0\" >Metric</th>\n",
+       "      <th id=\"T_9d893_level0_col1\" class=\"col_heading level0 col1\" >Value</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_b08f9_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
-       "      <td id=\"T_b08f9_row0_col0\" class=\"data row0 col0\" >Total number of responses</td>\n",
-       "      <td id=\"T_b08f9_row0_col1\" class=\"data row0 col1\" >78.00</td>\n",
+       "      <th id=\"T_9d893_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+       "      <td id=\"T_9d893_row0_col0\" class=\"data row0 col0\" >Total number of responses</td>\n",
+       "      <td id=\"T_9d893_row0_col1\" class=\"data row0 col1\" >78.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_b08f9_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
-       "      <td id=\"T_b08f9_row1_col0\" class=\"data row1 col0\" >Total number of completed responses</td>\n",
-       "      <td id=\"T_b08f9_row1_col1\" class=\"data row1 col1\" >60.00</td>\n",
+       "      <th id=\"T_9d893_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
+       "      <td id=\"T_9d893_row1_col0\" class=\"data row1 col0\" >Total number of completed responses</td>\n",
+       "      <td id=\"T_9d893_row1_col1\" class=\"data row1 col1\" >60.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_b08f9_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n",
-       "      <td id=\"T_b08f9_row2_col0\" class=\"data row2 col0\" >Completion rate (%)</td>\n",
-       "      <td id=\"T_b08f9_row2_col1\" class=\"data row2 col1\" >76.92</td>\n",
+       "      <th id=\"T_9d893_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n",
+       "      <td id=\"T_9d893_row2_col0\" class=\"data row2 col0\" >Completion rate (%)</td>\n",
+       "      <td id=\"T_9d893_row2_col1\" class=\"data row2 col1\" >76.92</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_b08f9_level0_row3\" class=\"row_heading level0 row3\" >3</th>\n",
-       "      <td id=\"T_b08f9_row3_col0\" class=\"data row3 col0\" >Average duration (sec)</td>\n",
-       "      <td id=\"T_b08f9_row3_col1\" class=\"data row3 col1\" >26528.42</td>\n",
+       "      <th id=\"T_9d893_level0_row3\" class=\"row_heading level0 row3\" >3</th>\n",
+       "      <td id=\"T_9d893_row3_col0\" class=\"data row3 col0\" >Average duration (sec)</td>\n",
+       "      <td id=\"T_9d893_row3_col1\" class=\"data row3 col1\" >26528.42</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_b08f9_level0_row4\" class=\"row_heading level0 row4\" >4</th>\n",
-       "      <td id=\"T_b08f9_row4_col0\" class=\"data row4 col0\" >Median duration (sec)</td>\n",
-       "      <td id=\"T_b08f9_row4_col1\" class=\"data row4 col1\" >986.50</td>\n",
+       "      <th id=\"T_9d893_level0_row4\" class=\"row_heading level0 row4\" >4</th>\n",
+       "      <td id=\"T_9d893_row4_col0\" class=\"data row4 col0\" >Median duration (sec)</td>\n",
+       "      <td id=\"T_9d893_row4_col1\" class=\"data row4 col1\" >986.50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_b08f9_level0_row5\" class=\"row_heading level0 row5\" >5</th>\n",
-       "      <td id=\"T_b08f9_row5_col0\" class=\"data row5 col0\" >Average Python experience (years)</td>\n",
-       "      <td id=\"T_b08f9_row5_col1\" class=\"data row5 col1\" >5.70</td>\n",
+       "      <th id=\"T_9d893_level0_row5\" class=\"row_heading level0 row5\" >5</th>\n",
+       "      <td id=\"T_9d893_row5_col0\" class=\"data row5 col0\" >Average Python experience (years)</td>\n",
+       "      <td id=\"T_9d893_row5_col1\" class=\"data row5 col1\" >5.70</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_b08f9_level0_row6\" class=\"row_heading level0 row6\" >6</th>\n",
-       "      <td id=\"T_b08f9_row6_col0\" class=\"data row6 col0\" >Average general experience (years)</td>\n",
-       "      <td id=\"T_b08f9_row6_col1\" class=\"data row6 col1\" >12.77</td>\n",
+       "      <th id=\"T_9d893_level0_row6\" class=\"row_heading level0 row6\" >6</th>\n",
+       "      <td id=\"T_9d893_row6_col0\" class=\"data row6 col0\" >Average general experience (years)</td>\n",
+       "      <td id=\"T_9d893_row6_col1\" class=\"data row6 col1\" >12.77</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_b08f9_level0_row7\" class=\"row_heading level0 row7\" >7</th>\n",
-       "      <td id=\"T_b08f9_row7_col0\" class=\"data row7 col0\" >Average estimated correct answers</td>\n",
-       "      <td id=\"T_b08f9_row7_col1\" class=\"data row7 col1\" >12.22</td>\n",
+       "      <th id=\"T_9d893_level0_row7\" class=\"row_heading level0 row7\" >7</th>\n",
+       "      <td id=\"T_9d893_row7_col0\" class=\"data row7 col0\" >Average estimated correct answers</td>\n",
+       "      <td id=\"T_9d893_row7_col1\" class=\"data row7 col1\" >12.22</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_b08f9_level0_row8\" class=\"row_heading level0 row8\" >8</th>\n",
-       "      <td id=\"T_b08f9_row8_col0\" class=\"data row8 col0\" >Pearson Correlation (Python YoE and General programming YoE)</td>\n",
-       "      <td id=\"T_b08f9_row8_col1\" class=\"data row8 col1\" >0.55</td>\n",
+       "      <th id=\"T_9d893_level0_row8\" class=\"row_heading level0 row8\" >8</th>\n",
+       "      <td id=\"T_9d893_row8_col0\" class=\"data row8 col0\" >Pearson Correlation (Python YoE and General programming YoE)</td>\n",
+       "      <td id=\"T_9d893_row8_col1\" class=\"data row8 col1\" >0.55</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_b08f9_level0_row9\" class=\"row_heading level0 row9\" >9</th>\n",
-       "      <td id=\"T_b08f9_row9_col0\" class=\"data row9 col0\" >Spearman Correlation (Python YoE and self-reported score)</td>\n",
-       "      <td id=\"T_b08f9_row9_col1\" class=\"data row9 col1\" >0.24</td>\n",
+       "      <th id=\"T_9d893_level0_row9\" class=\"row_heading level0 row9\" >9</th>\n",
+       "      <td id=\"T_9d893_row9_col0\" class=\"data row9 col0\" >Spearman Correlation (Python YoE and self-reported score)</td>\n",
+       "      <td id=\"T_9d893_row9_col1\" class=\"data row9 col1\" >0.24</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_b08f9_level0_row10\" class=\"row_heading level0 row10\" >10</th>\n",
-       "      <td id=\"T_b08f9_row10_col0\" class=\"data row10 col0\" >Spearman Correlation (General programming YoE and self-reported score)</td>\n",
-       "      <td id=\"T_b08f9_row10_col1\" class=\"data row10 col1\" >0.03</td>\n",
+       "      <th id=\"T_9d893_level0_row10\" class=\"row_heading level0 row10\" >10</th>\n",
+       "      <td id=\"T_9d893_row10_col0\" class=\"data row10 col0\" >Spearman Correlation (General programming YoE and self-reported score)</td>\n",
+       "      <td id=\"T_9d893_row10_col1\" class=\"data row10 col1\" >0.03</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
@@ -314,19 +329,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 21
-  },
-  {
-   "cell_type": "code",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-06-02T20:53:51.572382Z",
-     "start_time": "2025-06-02T20:53:51.571190Z"
-    }
-   },
-   "source": [],
-   "outputs": [],
-   "execution_count": null
+   "execution_count": 6
   }
  ],
  "metadata": {
