--- a/notebooks/02_visualization.ipynb
+++ b/notebooks/02_visualization.ipynb
@@ -4,17 +4,11 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "## Step 0.1: Install Required Libraries\n",
-    "\n",
-    "Prior to running the analysis, ensure that the required libraries are installed. For this, you need only install the libraries defined in the `requirements.txt` file. You can do this by running the following command in your terminal:\n",
-    "\n",
-    "```bash\n",
-    "pip install -r requirements.txt\n",
-    "```# EXCEED Python Qualtrics Survey - Visualization\n",
+    "# EXCEED Python Qualtrics Survey - Visualization\n",
     "\n",
     "This notebook provides visualizations of the EXCEED Python Qualtrics survey data. The goal is to visualize some of the key metrics and respondents' results to better understand the survey questions and the participants' performance. Put simply, this notebook is a companion to the first 2 notebooks.\n"
    ],
-   "id": "ecabf9df53a58d15"
+   "id": "30d251a013702051"
   },
   {
    "metadata": {},
@@ -270,7 +264,7 @@
     "import pandas as pd\n",
     "\n",
     "# Set the path to the Qualtrics CSV file (adjust as needed, but default is in the same directory)\n",
-    "file_path = \"../data/survey_results.csv\"\n",
+    "file_path = \"../data/survey_results_02_06_2025.csv\"\n",
     "\n",
     "# 1. Load data (Qualtrics exports are semicolon‑delimited by default)\n",
     "df = pd.read_csv(file_path, sep=';')\n",
