--- a/notebooks/01_high_level_analysis.ipynb
+++ b/notebooks/01_high_level_analysis.ipynb
@@ -31,8 +31,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-03T07:03:26.071901Z",
-     "start_time": "2025-06-03T07:03:25.853808Z"
+     "end_time": "2025-06-03T09:47:22.901636Z",
+     "start_time": "2025-06-03T09:47:22.898317Z"
     }
    },
    "source": [
@@ -64,8 +64,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-03T07:03:26.572562Z",
-     "start_time": "2025-06-03T07:03:26.131908Z"
+     "end_time": "2025-06-03T09:47:23.383752Z",
+     "start_time": "2025-06-03T09:47:22.952570Z"
     }
    },
    "source": [
@@ -82,6 +82,7 @@
       "Requirement already satisfied: numpy==2.2.6 in /Users/amoraru/Documents/GitHub/EXCEED/exceed-python-skill-assessment/.venv/lib/python3.12/site-packages (from -r requirements.txt (line 4)) (2.2.6)\r\n",
       "Requirement already satisfied: scipy==1.15.3 in /Users/amoraru/Documents/GitHub/EXCEED/exceed-python-skill-assessment/.venv/lib/python3.12/site-packages (from -r requirements.txt (line 5)) (1.15.3)\r\n",
       "Requirement already satisfied: matplotlib==3.10.3 in /Users/amoraru/Documents/GitHub/EXCEED/exceed-python-skill-assessment/.venv/lib/python3.12/site-packages (from -r requirements.txt (line 6)) (3.10.3)\r\n",
+      "Requirement already satisfied: seaborn==0.13.2 in /Users/amoraru/Documents/GitHub/EXCEED/exceed-python-skill-assessment/.venv/lib/python3.12/site-packages (from -r requirements.txt (line 8)) (0.13.2)\r\n",
       "Requirement already satisfied: python-dateutil>=2.8.2 in /Users/amoraru/Documents/GitHub/EXCEED/exceed-python-skill-assessment/.venv/lib/python3.12/site-packages (from pandas==2.2.3->-r requirements.txt (line 1)) (2.9.0.post0)\r\n",
       "Requirement already satisfied: pytz>=2020.1 in /Users/amoraru/Documents/GitHub/EXCEED/exceed-python-skill-assessment/.venv/lib/python3.12/site-packages (from pandas==2.2.3->-r requirements.txt (line 1)) (2025.2)\r\n",
       "Requirement already satisfied: tzdata>=2022.7 in /Users/amoraru/Documents/GitHub/EXCEED/exceed-python-skill-assessment/.venv/lib/python3.12/site-packages (from pandas==2.2.3->-r requirements.txt (line 1)) (2025.2)\r\n",
@@ -131,8 +132,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-03T07:03:26.585459Z",
-     "start_time": "2025-06-03T07:03:26.581501Z"
+     "end_time": "2025-06-03T09:47:23.400077Z",
+     "start_time": "2025-06-03T09:47:23.395837Z"
     }
    },
    "source": [
@@ -160,8 +161,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-03T07:03:26.594234Z",
-     "start_time": "2025-06-03T07:03:26.592529Z"
+     "end_time": "2025-06-03T09:47:23.409345Z",
+     "start_time": "2025-06-03T09:47:23.407411Z"
     }
    },
    "source": [
@@ -184,8 +185,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-03T07:03:26.605423Z",
-     "start_time": "2025-06-03T07:03:26.602162Z"
+     "end_time": "2025-06-03T09:47:23.421451Z",
+     "start_time": "2025-06-03T09:47:23.417835Z"
     }
    },
    "source": [
@@ -223,8 +224,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-03T07:03:26.810833Z",
-     "start_time": "2025-06-03T07:03:26.614405Z"
+     "end_time": "2025-06-03T09:47:23.461157Z",
+     "start_time": "2025-06-03T09:47:23.429935Z"
     }
    },
    "source": [
@@ -252,74 +253,74 @@
     {
      "data": {
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x108cadb20>"
+       "<pandas.io.formats.style.Styler at 0x120c84c20>"
       ],
       "text/html": [
        "<style type=\"text/css\">\n",
        "</style>\n",
-       "<table id=\"T_9d893\">\n",
+       "<table id=\"T_baca3\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_9d893_level0_col0\" class=\"col_heading level0 col0\" >Metric</th>\n",
-       "      <th id=\"T_9d893_level0_col1\" class=\"col_heading level0 col1\" >Value</th>\n",
+       "      <th id=\"T_baca3_level0_col0\" class=\"col_heading level0 col0\" >Metric</th>\n",
+       "      <th id=\"T_baca3_level0_col1\" class=\"col_heading level0 col1\" >Value</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_9d893_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
-       "      <td id=\"T_9d893_row0_col0\" class=\"data row0 col0\" >Total number of responses</td>\n",
-       "      <td id=\"T_9d893_row0_col1\" class=\"data row0 col1\" >78.00</td>\n",
+       "      <th id=\"T_baca3_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+       "      <td id=\"T_baca3_row0_col0\" class=\"data row0 col0\" >Total number of responses</td>\n",
+       "      <td id=\"T_baca3_row0_col1\" class=\"data row0 col1\" >78.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_9d893_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
-       "      <td id=\"T_9d893_row1_col0\" class=\"data row1 col0\" >Total number of completed responses</td>\n",
-       "      <td id=\"T_9d893_row1_col1\" class=\"data row1 col1\" >60.00</td>\n",
+       "      <th id=\"T_baca3_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
+       "      <td id=\"T_baca3_row1_col0\" class=\"data row1 col0\" >Total number of completed responses</td>\n",
+       "      <td id=\"T_baca3_row1_col1\" class=\"data row1 col1\" >60.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_9d893_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n",
-       "      <td id=\"T_9d893_row2_col0\" class=\"data row2 col0\" >Completion rate (%)</td>\n",
-       "      <td id=\"T_9d893_row2_col1\" class=\"data row2 col1\" >76.92</td>\n",
+       "      <th id=\"T_baca3_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n",
+       "      <td id=\"T_baca3_row2_col0\" class=\"data row2 col0\" >Completion rate (%)</td>\n",
+       "      <td id=\"T_baca3_row2_col1\" class=\"data row2 col1\" >76.92</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_9d893_level0_row3\" class=\"row_heading level0 row3\" >3</th>\n",
-       "      <td id=\"T_9d893_row3_col0\" class=\"data row3 col0\" >Average duration (sec)</td>\n",
-       "      <td id=\"T_9d893_row3_col1\" class=\"data row3 col1\" >26528.42</td>\n",
+       "      <th id=\"T_baca3_level0_row3\" class=\"row_heading level0 row3\" >3</th>\n",
+       "      <td id=\"T_baca3_row3_col0\" class=\"data row3 col0\" >Average duration (sec)</td>\n",
+       "      <td id=\"T_baca3_row3_col1\" class=\"data row3 col1\" >26528.42</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_9d893_level0_row4\" class=\"row_heading level0 row4\" >4</th>\n",
-       "      <td id=\"T_9d893_row4_col0\" class=\"data row4 col0\" >Median duration (sec)</td>\n",
-       "      <td id=\"T_9d893_row4_col1\" class=\"data row4 col1\" >986.50</td>\n",
+       "      <th id=\"T_baca3_level0_row4\" class=\"row_heading level0 row4\" >4</th>\n",
+       "      <td id=\"T_baca3_row4_col0\" class=\"data row4 col0\" >Median duration (sec)</td>\n",
+       "      <td id=\"T_baca3_row4_col1\" class=\"data row4 col1\" >986.50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_9d893_level0_row5\" class=\"row_heading level0 row5\" >5</th>\n",
-       "      <td id=\"T_9d893_row5_col0\" class=\"data row5 col0\" >Average Python experience (years)</td>\n",
-       "      <td id=\"T_9d893_row5_col1\" class=\"data row5 col1\" >5.70</td>\n",
+       "      <th id=\"T_baca3_level0_row5\" class=\"row_heading level0 row5\" >5</th>\n",
+       "      <td id=\"T_baca3_row5_col0\" class=\"data row5 col0\" >Average Python experience (years)</td>\n",
+       "      <td id=\"T_baca3_row5_col1\" class=\"data row5 col1\" >5.70</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_9d893_level0_row6\" class=\"row_heading level0 row6\" >6</th>\n",
-       "      <td id=\"T_9d893_row6_col0\" class=\"data row6 col0\" >Average general experience (years)</td>\n",
-       "      <td id=\"T_9d893_row6_col1\" class=\"data row6 col1\" >12.77</td>\n",
+       "      <th id=\"T_baca3_level0_row6\" class=\"row_heading level0 row6\" >6</th>\n",
+       "      <td id=\"T_baca3_row6_col0\" class=\"data row6 col0\" >Average general experience (years)</td>\n",
+       "      <td id=\"T_baca3_row6_col1\" class=\"data row6 col1\" >12.77</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_9d893_level0_row7\" class=\"row_heading level0 row7\" >7</th>\n",
-       "      <td id=\"T_9d893_row7_col0\" class=\"data row7 col0\" >Average estimated correct answers</td>\n",
-       "      <td id=\"T_9d893_row7_col1\" class=\"data row7 col1\" >12.22</td>\n",
+       "      <th id=\"T_baca3_level0_row7\" class=\"row_heading level0 row7\" >7</th>\n",
+       "      <td id=\"T_baca3_row7_col0\" class=\"data row7 col0\" >Average estimated correct answers</td>\n",
+       "      <td id=\"T_baca3_row7_col1\" class=\"data row7 col1\" >12.22</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_9d893_level0_row8\" class=\"row_heading level0 row8\" >8</th>\n",
-       "      <td id=\"T_9d893_row8_col0\" class=\"data row8 col0\" >Pearson Correlation (Python YoE and General programming YoE)</td>\n",
-       "      <td id=\"T_9d893_row8_col1\" class=\"data row8 col1\" >0.55</td>\n",
+       "      <th id=\"T_baca3_level0_row8\" class=\"row_heading level0 row8\" >8</th>\n",
+       "      <td id=\"T_baca3_row8_col0\" class=\"data row8 col0\" >Pearson Correlation (Python YoE and General programming YoE)</td>\n",
+       "      <td id=\"T_baca3_row8_col1\" class=\"data row8 col1\" >0.55</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_9d893_level0_row9\" class=\"row_heading level0 row9\" >9</th>\n",
-       "      <td id=\"T_9d893_row9_col0\" class=\"data row9 col0\" >Spearman Correlation (Python YoE and self-reported score)</td>\n",
-       "      <td id=\"T_9d893_row9_col1\" class=\"data row9 col1\" >0.24</td>\n",
+       "      <th id=\"T_baca3_level0_row9\" class=\"row_heading level0 row9\" >9</th>\n",
+       "      <td id=\"T_baca3_row9_col0\" class=\"data row9 col0\" >Spearman Correlation (Python YoE and self-reported score)</td>\n",
+       "      <td id=\"T_baca3_row9_col1\" class=\"data row9 col1\" >0.24</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_9d893_level0_row10\" class=\"row_heading level0 row10\" >10</th>\n",
-       "      <td id=\"T_9d893_row10_col0\" class=\"data row10 col0\" >Spearman Correlation (General programming YoE and self-reported score)</td>\n",
-       "      <td id=\"T_9d893_row10_col1\" class=\"data row10 col1\" >0.03</td>\n",
+       "      <th id=\"T_baca3_level0_row10\" class=\"row_heading level0 row10\" >10</th>\n",
+       "      <td id=\"T_baca3_row10_col0\" class=\"data row10 col0\" >Spearman Correlation (General programming YoE and self-reported score)</td>\n",
+       "      <td id=\"T_baca3_row10_col1\" class=\"data row10 col1\" >0.03</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
