--- a/notebooks/03_visualization.ipynb
+++ b/notebooks/03_visualization.ipynb
@@ -365,8 +365,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-03T09:54:41.944277Z",
-     "start_time": "2025-06-03T09:54:41.890145Z"
+     "end_time": "2025-06-03T10:10:28.736387Z",
+     "start_time": "2025-06-03T10:10:28.678371Z"
     }
    },
    "cell_type": "code",
@@ -395,7 +395,7 @@
     "plt.xlabel(\"General Programming Years of Experience\")\n",
     "plt.ylabel(\"Python Years of Experience\")\n",
     "plt.title(\"Python YoE vs General Programming YoE by Dreyfus Skill Level\")\n",
-    "plt.legend(title=\"Dreyfus Skill Level\", bbox_to_anchor=(1.05, 1), loc='upper left')\n",
+    "plt.legend(title=\"Dreyfus Skill Level\", bbox_to_anchor=(1.05, 1))\n",
     "plt.tight_layout()\n",
     "plt.show()"
    ],
@@ -412,7 +412,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 8
+   "execution_count": 11
   },
   {
    "metadata": {},
