--- a/notebooks/01_high_level_analysis.ipynb
+++ b/notebooks/01_high_level_analysis.ipynb
@@ -31,8 +31,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-03T21:15:03.988237Z",
-     "start_time": "2025-06-03T21:15:03.982875Z"
+     "end_time": "2025-08-17T13:41:35.668670Z",
+     "start_time": "2025-08-17T13:41:35.660034Z"
     }
    },
    "source": [
@@ -45,7 +45,7 @@
     "df = pd.read_csv(file_path, sep=';')"
    ],
    "outputs": [],
-   "execution_count": 26
+   "execution_count": 13
   },
   {
    "cell_type": "markdown",
@@ -64,8 +64,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-03T21:15:04.463712Z",
-     "start_time": "2025-06-03T21:15:04.001108Z"
+     "end_time": "2025-08-17T13:41:36.193948Z",
+     "start_time": "2025-08-17T13:41:35.674923Z"
     }
    },
    "source": [
@@ -111,13 +111,13 @@
       "Requirement already satisfied: asttokens>=2.1.0 in /Users/amoraru/Documents/GitHub/EXCEED/exceed-python-skill-assessment/.venv/lib/python3.12/site-packages (from stack_data->ipython==9.2.0->-r requirements.txt (line 2)) (3.0.0)\r\n",
       "Requirement already satisfied: pure-eval in /Users/amoraru/Documents/GitHub/EXCEED/exceed-python-skill-assessment/.venv/lib/python3.12/site-packages (from stack_data->ipython==9.2.0->-r requirements.txt (line 2)) (0.2.3)\r\n",
       "\r\n",
-      "\u001B[1m[\u001B[0m\u001B[34;49mnotice\u001B[0m\u001B[1;39;49m]\u001B[0m\u001B[39;49m A new release of pip is available: \u001B[0m\u001B[31;49m24.3.1\u001B[0m\u001B[39;49m -> \u001B[0m\u001B[32;49m25.1.1\u001B[0m\r\n",
+      "\u001B[1m[\u001B[0m\u001B[34;49mnotice\u001B[0m\u001B[1;39;49m]\u001B[0m\u001B[39;49m A new release of pip is available: \u001B[0m\u001B[31;49m24.3.1\u001B[0m\u001B[39;49m -> \u001B[0m\u001B[32;49m25.2\u001B[0m\r\n",
       "\u001B[1m[\u001B[0m\u001B[34;49mnotice\u001B[0m\u001B[1;39;49m]\u001B[0m\u001B[39;49m To update, run: \u001B[0m\u001B[32;49mpip install --upgrade pip\u001B[0m\r\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
-   "execution_count": 27
+   "execution_count": 14
   },
   {
    "cell_type": "markdown",
@@ -132,8 +132,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-03T21:15:04.479923Z",
-     "start_time": "2025-06-03T21:15:04.476222Z"
+     "end_time": "2025-08-17T13:41:36.202610Z",
+     "start_time": "2025-08-17T13:41:36.198044Z"
     }
    },
    "source": [
@@ -146,7 +146,7 @@
     "df = pd.read_csv(file_path, sep=';')"
    ],
    "outputs": [],
-   "execution_count": 28
+   "execution_count": 15
   },
   {
    "cell_type": "markdown",
@@ -161,8 +161,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-03T21:15:04.490667Z",
-     "start_time": "2025-06-03T21:15:04.488391Z"
+     "end_time": "2025-08-17T13:41:36.207842Z",
+     "start_time": "2025-08-17T13:41:36.205797Z"
     }
    },
    "source": [
@@ -170,7 +170,7 @@
     "completed = df[df[\"Finished\"] == 1]"
    ],
    "outputs": [],
-   "execution_count": 29
+   "execution_count": 16
   },
   {
    "cell_type": "markdown",
@@ -185,8 +185,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-03T21:15:04.497137Z",
-     "start_time": "2025-06-03T21:15:04.493279Z"
+     "end_time": "2025-08-17T13:41:36.214891Z",
+     "start_time": "2025-08-17T13:41:36.210876Z"
     }
    },
    "source": [
@@ -214,7 +214,7 @@
     "}"
    ],
    "outputs": [],
-   "execution_count": 30
+   "execution_count": 17
   },
   {
    "cell_type": "markdown",
@@ -229,8 +229,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-03T21:15:04.516164Z",
-     "start_time": "2025-06-03T21:15:04.511654Z"
+     "end_time": "2025-08-17T13:41:36.223986Z",
+     "start_time": "2025-08-17T13:41:36.217796Z"
     }
    },
    "source": [
@@ -258,89 +258,89 @@
     {
      "data": {
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x1066a6a50>"
+       "<pandas.io.formats.style.Styler at 0x11af28740>"
       ],
       "text/html": [
        "<style type=\"text/css\">\n",
        "</style>\n",
-       "<table id=\"T_83b66\">\n",
+       "<table id=\"T_90d17\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_83b66_level0_col0\" class=\"col_heading level0 col0\" >Metric</th>\n",
-       "      <th id=\"T_83b66_level0_col1\" class=\"col_heading level0 col1\" >Value</th>\n",
+       "      <th id=\"T_90d17_level0_col0\" class=\"col_heading level0 col0\" >Metric</th>\n",
+       "      <th id=\"T_90d17_level0_col1\" class=\"col_heading level0 col1\" >Value</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_83b66_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
-       "      <td id=\"T_83b66_row0_col0\" class=\"data row0 col0\" >Total number of responses</td>\n",
-       "      <td id=\"T_83b66_row0_col1\" class=\"data row0 col1\" >78.00</td>\n",
+       "      <th id=\"T_90d17_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+       "      <td id=\"T_90d17_row0_col0\" class=\"data row0 col0\" >Total number of responses</td>\n",
+       "      <td id=\"T_90d17_row0_col1\" class=\"data row0 col1\" >78.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_83b66_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
-       "      <td id=\"T_83b66_row1_col0\" class=\"data row1 col0\" >Total number of completed responses</td>\n",
-       "      <td id=\"T_83b66_row1_col1\" class=\"data row1 col1\" >60.00</td>\n",
+       "      <th id=\"T_90d17_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
+       "      <td id=\"T_90d17_row1_col0\" class=\"data row1 col0\" >Total number of completed responses</td>\n",
+       "      <td id=\"T_90d17_row1_col1\" class=\"data row1 col1\" >60.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_83b66_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n",
-       "      <td id=\"T_83b66_row2_col0\" class=\"data row2 col0\" >Completion rate (%)</td>\n",
-       "      <td id=\"T_83b66_row2_col1\" class=\"data row2 col1\" >76.92</td>\n",
+       "      <th id=\"T_90d17_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n",
+       "      <td id=\"T_90d17_row2_col0\" class=\"data row2 col0\" >Completion rate (%)</td>\n",
+       "      <td id=\"T_90d17_row2_col1\" class=\"data row2 col1\" >76.92</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_83b66_level0_row3\" class=\"row_heading level0 row3\" >3</th>\n",
-       "      <td id=\"T_83b66_row3_col0\" class=\"data row3 col0\" >Average duration (sec)</td>\n",
-       "      <td id=\"T_83b66_row3_col1\" class=\"data row3 col1\" >26528.42</td>\n",
+       "      <th id=\"T_90d17_level0_row3\" class=\"row_heading level0 row3\" >3</th>\n",
+       "      <td id=\"T_90d17_row3_col0\" class=\"data row3 col0\" >Average duration (sec)</td>\n",
+       "      <td id=\"T_90d17_row3_col1\" class=\"data row3 col1\" >26528.42</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_83b66_level0_row4\" class=\"row_heading level0 row4\" >4</th>\n",
-       "      <td id=\"T_83b66_row4_col0\" class=\"data row4 col0\" >Median duration (sec)</td>\n",
-       "      <td id=\"T_83b66_row4_col1\" class=\"data row4 col1\" >986.50</td>\n",
+       "      <th id=\"T_90d17_level0_row4\" class=\"row_heading level0 row4\" >4</th>\n",
+       "      <td id=\"T_90d17_row4_col0\" class=\"data row4 col0\" >Median duration (sec)</td>\n",
+       "      <td id=\"T_90d17_row4_col1\" class=\"data row4 col1\" >986.50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_83b66_level0_row5\" class=\"row_heading level0 row5\" >5</th>\n",
-       "      <td id=\"T_83b66_row5_col0\" class=\"data row5 col0\" >Average Dreyfus level</td>\n",
-       "      <td id=\"T_83b66_row5_col1\" class=\"data row5 col1\" >4.02</td>\n",
+       "      <th id=\"T_90d17_level0_row5\" class=\"row_heading level0 row5\" >5</th>\n",
+       "      <td id=\"T_90d17_row5_col0\" class=\"data row5 col0\" >Average Dreyfus level</td>\n",
+       "      <td id=\"T_90d17_row5_col1\" class=\"data row5 col1\" >4.02</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_83b66_level0_row6\" class=\"row_heading level0 row6\" >6</th>\n",
-       "      <td id=\"T_83b66_row6_col0\" class=\"data row6 col0\" >Average Python experience (years)</td>\n",
-       "      <td id=\"T_83b66_row6_col1\" class=\"data row6 col1\" >5.70</td>\n",
+       "      <th id=\"T_90d17_level0_row6\" class=\"row_heading level0 row6\" >6</th>\n",
+       "      <td id=\"T_90d17_row6_col0\" class=\"data row6 col0\" >Average Python experience (years)</td>\n",
+       "      <td id=\"T_90d17_row6_col1\" class=\"data row6 col1\" >5.70</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_83b66_level0_row7\" class=\"row_heading level0 row7\" >7</th>\n",
-       "      <td id=\"T_83b66_row7_col0\" class=\"data row7 col0\" >Average general experience (years)</td>\n",
-       "      <td id=\"T_83b66_row7_col1\" class=\"data row7 col1\" >12.77</td>\n",
+       "      <th id=\"T_90d17_level0_row7\" class=\"row_heading level0 row7\" >7</th>\n",
+       "      <td id=\"T_90d17_row7_col0\" class=\"data row7 col0\" >Average general experience (years)</td>\n",
+       "      <td id=\"T_90d17_row7_col1\" class=\"data row7 col1\" >12.77</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_83b66_level0_row8\" class=\"row_heading level0 row8\" >8</th>\n",
-       "      <td id=\"T_83b66_row8_col0\" class=\"data row8 col0\" >Average estimated correct answers</td>\n",
-       "      <td id=\"T_83b66_row8_col1\" class=\"data row8 col1\" >12.22</td>\n",
+       "      <th id=\"T_90d17_level0_row8\" class=\"row_heading level0 row8\" >8</th>\n",
+       "      <td id=\"T_90d17_row8_col0\" class=\"data row8 col0\" >Average estimated correct answers</td>\n",
+       "      <td id=\"T_90d17_row8_col1\" class=\"data row8 col1\" >12.22</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_83b66_level0_row9\" class=\"row_heading level0 row9\" >9</th>\n",
-       "      <td id=\"T_83b66_row9_col0\" class=\"data row9 col0\" >Pearson Correlation (Python YoE and Dreyfus level)</td>\n",
-       "      <td id=\"T_83b66_row9_col1\" class=\"data row9 col1\" >0.34</td>\n",
+       "      <th id=\"T_90d17_level0_row9\" class=\"row_heading level0 row9\" >9</th>\n",
+       "      <td id=\"T_90d17_row9_col0\" class=\"data row9 col0\" >Pearson Correlation (Python YoE and Dreyfus level)</td>\n",
+       "      <td id=\"T_90d17_row9_col1\" class=\"data row9 col1\" >0.34</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_83b66_level0_row10\" class=\"row_heading level0 row10\" >10</th>\n",
-       "      <td id=\"T_83b66_row10_col0\" class=\"data row10 col0\" >Pearson Correlation (Python YoE and General programming YoE)</td>\n",
-       "      <td id=\"T_83b66_row10_col1\" class=\"data row10 col1\" >0.55</td>\n",
+       "      <th id=\"T_90d17_level0_row10\" class=\"row_heading level0 row10\" >10</th>\n",
+       "      <td id=\"T_90d17_row10_col0\" class=\"data row10 col0\" >Pearson Correlation (Python YoE and General programming YoE)</td>\n",
+       "      <td id=\"T_90d17_row10_col1\" class=\"data row10 col1\" >0.55</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_83b66_level0_row11\" class=\"row_heading level0 row11\" >11</th>\n",
-       "      <td id=\"T_83b66_row11_col0\" class=\"data row11 col0\" >Spearman Correlation (Dreyfus level and self-reported correct score)</td>\n",
-       "      <td id=\"T_83b66_row11_col1\" class=\"data row11 col1\" >0.35</td>\n",
+       "      <th id=\"T_90d17_level0_row11\" class=\"row_heading level0 row11\" >11</th>\n",
+       "      <td id=\"T_90d17_row11_col0\" class=\"data row11 col0\" >Spearman Correlation (Dreyfus level and self-reported correct score)</td>\n",
+       "      <td id=\"T_90d17_row11_col1\" class=\"data row11 col1\" >0.35</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_83b66_level0_row12\" class=\"row_heading level0 row12\" >12</th>\n",
-       "      <td id=\"T_83b66_row12_col0\" class=\"data row12 col0\" >Spearman Correlation (Python YoE and self-reported correct score)</td>\n",
-       "      <td id=\"T_83b66_row12_col1\" class=\"data row12 col1\" >0.24</td>\n",
+       "      <th id=\"T_90d17_level0_row12\" class=\"row_heading level0 row12\" >12</th>\n",
+       "      <td id=\"T_90d17_row12_col0\" class=\"data row12 col0\" >Spearman Correlation (Python YoE and self-reported correct score)</td>\n",
+       "      <td id=\"T_90d17_row12_col1\" class=\"data row12 col1\" >0.24</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_83b66_level0_row13\" class=\"row_heading level0 row13\" >13</th>\n",
-       "      <td id=\"T_83b66_row13_col0\" class=\"data row13 col0\" >Spearman Correlation (General programming YoE and self-reported correct score)</td>\n",
-       "      <td id=\"T_83b66_row13_col1\" class=\"data row13 col1\" >0.03</td>\n",
+       "      <th id=\"T_90d17_level0_row13\" class=\"row_heading level0 row13\" >13</th>\n",
+       "      <td id=\"T_90d17_row13_col0\" class=\"data row13 col0\" >Spearman Correlation (General programming YoE and self-reported correct score)</td>\n",
+       "      <td id=\"T_90d17_row13_col1\" class=\"data row13 col1\" >0.03</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
@@ -350,7 +350,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 31
+   "execution_count": 18
   }
  ],
  "metadata": {
